--- a/research.html
+++ b/research.html
@@ -95,9 +95,9 @@
       <div class="project-text">
         <strong>The Multiphase Rheology of Natural Lava: Insights from Litli-Hrútur, Iceland:</strong>
         <p>
-          This project combines in-situ field viscometry with lab-based remelt rheology to trace the true natural evolution of eruptive viscosity. This type of work was only made possible through recent advances in field instrumentation (<a href="https://doi.org/10.1063/5.0206776" target="_blank">Harris et al. 2024b</a>) (<a href="https://doi.org/10.1063/5.0160247" target="_blank">Chevrel et al. 2023</a>). 
+          This project combines in-situ field viscometry with lab-based remelt rheology to trace the true natural evolution of lava viscosity. This type of work was only made possible through recent advances in field instrumentation (<a href="https://doi.org/10.1063/5.0206776" target="_blank">Harris et al. 2024b</a>) (<a href="https://doi.org/10.1063/5.0160247" target="_blank">Chevrel et al. 2023</a>). 
           </p>
-          Findings highlight how effective field viscometry is at capturing the rheological evolution of a unique eruption (<a href="https://doi.org/10.1130/G52558.1" target="_blank">Harris et al. 2024a</a>) while also verifying the successful capabilities and pointing out some of the limitations of laboratory remelt viscometry.
+          Our findings highlight how effective field viscometry is at capturing the rheological evolution of a unique eruption (<a href="https://doi.org/10.1130/G52558.1" target="_blank">Harris et al. 2024a</a>) while also verifying the successful capabilities and pointing out some of the limitations of the more conventionally used laboratory remelt viscometry approach (See Harris et al., 2025 (Under Review)).
         </p>
       </div>
       <div class="project-image">
@@ -112,12 +112,14 @@
       <div class="project-text">
         <strong>Glaciovolcanism within the Mount Meager Volcanic Complex of SW British Columbia:</strong>
         <p>
-          This study reconstructed the eruptive history of Cracked Mountain, a tuya near Mount Meager, using physical volcanology techniques (<a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">Harris et al. 2022</a>). Additional mapping and geochronology produced a detailed paleoenvironmental reconstruction of the last 500,000 years in the area (<a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">Harris et al. 2023</a>).
+          This study reconstructed the eruptive history of Cracked Mountain, a tuya near Mount Meager, using physical volcanology techniques to decipher the sequence of eruptive events. Paleomagnetic analyses were conducted on all eruptive units to determine their relative timing, ultimately demonstrating that the volcano erupted in a single event (i.e., it is monogenetic) (<a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">Harris et al. 2022</a>).
+        </p>
+          Additional mapping of glaciovolcanic and non-glaciovolcanic landforms within the Mount Meager volcanic complex was combined with new 40Ar/39Ar geochronology ages, enabling us to produce a detailed paleoenvironmental reconstruction of the last 500,000 years in the localized region of southwestern British Columbia (<a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">Harris et al. 2023</a>).
         </p>
       </div>
       <div class="project-image">
         <img src="media/glacial recons.jpg" alt="Cracked Mountain tuya" />
-        <div class="project-caption">Glacial Reconstruction of Mount Meager Volcanic Complex based on volcanic-landform-based-proxies.</div>
+        <div class="project-caption">Glacial Reconstruction of Mount Meager Volcanic Complex based on volcanic-landform-based-proxies and their radiometric 40Ar/39Ar ages .</div>
       </div>
     </div>
 
@@ -125,8 +127,9 @@
       <div class="project-text">
         <strong>Polymagmatic Sources of a Monogenetic Volcano:</strong>
         <p>
-          Petrochemical analyses of Cracked Mountain basalts revealed a bimodal crystal assemblage. Thermodynamic modeling indicated two distinct magma storage conditions prior to eruption (<a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">Harris and Russell 2022</a>).
+         We performed petrochemical analyses of basalts from Cracked Mountain, which revealed a bimodal crystal assemblage and distinct major element signatures. To investigate how these bimodal lavas may have formed within a magma chamber, we conducted extensive thermodynamic modeling using MELTS and tested phase assemblages using Pearce element ratios. 
         </p>
+         Our findings indicate that two distinct magma chambers existed prior to the monogenetic eruption at Cracked Mountain, with evidence of minor magmatic mixing between them (<a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">Harris and Russell 2022</a>).        </p>
       </div>
       <div class="project-image">
         <img src="media/CM_phases.jpg" alt="Basalt thin section microscopy" />
