--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="background"></div>
+
   <header>
     <h1>Martin A. Harris</h1>
     <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
@@ -17,33 +19,32 @@
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
     </nav>
+
     <!-- Large centered photo -->
-<div class="profile-photo-container">
-  <img src="media/Profile pic web.jpeg" alt="Your Name" class="profile-photo" />
-</div>
+    <div class="profile-photo-container">
+      <img src="media/Profile pic web.jpeg" alt="Your Name" class="profile-photo" />
+    </div>
 
     <h2>Work on Active Lava, Iceland</h2>
 
-<div class="gallery">
-  <!-- Images -->
-  <img src="media\Lava_Av1.JPG" alt="Axial Viscometery in Iceland">
-  <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland">
-  <img src="media\P1080745.JPG" alt="Lava samling in Iceland">
-  
-  <!-- GIFs -->
-   <!-- <img src="media/a2anql.gif" alt="Rotational Viscometry Clip">  -->
-    <!--<img src="media/a2ao65.gif.gif" alt="Axial Viscometry Clip">-->
-</div>
+    <div class="gallery">
+      <!-- Images -->
+      <img src="media/Lava_Av1.JPG" alt="Axial Viscometery in Iceland" />
+      <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland" />
+      <img src="media/P1080745.JPG" alt="Lava sampling in Iceland" />
+    </div>
   </header>
+
   <main>
     <h2>Welcome</h2>
     <p>
-I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
-This website summarizes my research, publications, and academic background.
-For any questions or future communication, please feel free to contact me at:
+      I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
+      This website summarizes my research, publications, and academic background.
+      For any questions or future communication, please feel free to contact me at:
       Martin.a.harris95@gmail.com.
     </p>
   </main>
+
   <footer>
     <p>© 2025 Martin A. Harris • Contact: martin.a.harris95@gmail.com</p>
   </footer>
