--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <title>About – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
@@ -15,6 +16,7 @@
   </style>
 </head>
 <body>
+  <div class="background"></div>
   <header>
     <h1>Martin A. Harris</h1>
     <nav>
