--- a/research.html
+++ b/research.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css" />
   <meta charset="UTF-8" />
   <title>Research – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
@@ -50,6 +51,7 @@
   </style>
 </head>
 <body>
+  <div class="background"></div>
   <header>
     <h1>Martin A. Harris</h1>
     <nav>
