--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css" />
+
   <meta charset="UTF-8" />
   <title>Publications – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
@@ -34,6 +36,8 @@
   </style>
 </head>
 <body>
+  <div class="background"></div>
+
   <header>
     <h1>Martin A. Harris</h1>
     <nav>
