--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
   <div class="background"></div>
   <header>
     <h1>Martin A. Harris</h1>
+    <h2>PhD</h2>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
