--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <div class="background"></div>
   <header>
     <h1>Martin A. Harris</h1>
-    <h2>PhD</h2>
+    <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
