--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,7 @@
 
   <header>
     <h1>Martin A. Harris</h1>
+    <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
