--- a/research.html
+++ b/research.html
@@ -54,6 +54,7 @@
   <div class="background"></div>
   <header>
     <h1>Martin A. Harris</h1>
+    <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
