--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img src="media/Profile pic web.jpeg" alt="Martin A. Harris" class="profile-photo" />
     </div>
 
-    <h2>Work on Active Lava, Iceland</h2>
+    <h2>Research Highlights</h2>
 
     <div class="gallery">
       <img src="media/Lava_Av1.JPG" alt="Axial Viscometry in Iceland" />
