--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
+      <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
+
     </nav>
 
     <!-- Large centered photo -->
