--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
-      <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">Google Scholar</a>
+      <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -25,8 +25,10 @@
   <main>
     <h2>Contact Me</h2>
     <form action="https://formsubmit.co/martin.a.harris95@gmail.com" method="POST">
-      <!-- Replace with your real email -->
+      <!-- Redirect to thank you page -->
+      <input type="hidden" name="_next" value="https://martinaharris.github.io/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
+      
       <label for="name">Name:</label><br />
       <input type="text" id="name" name="name" required><br />
 
