--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
   <main>
     <h2>Contact Me</h2>
     <form action="https://formsubmit.co/martin.a.harris95@gmail.com" method="POST">
+       <!-- Honeypot Field (Spam Protection) -->
+      <input type="text" name="_honey" style="display:none">
       <!-- Redirect to thank you page -->
       <input type="hidden" name="_next" value="https://martinaharris.github.io/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
