--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
+      <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
