--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="background"></div>
-  <header>
+    <header>
     <h1>Martin A. Harris</h1>
     <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
     <nav>
@@ -61,7 +61,10 @@
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
+      <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
+      <a href="contact.html">Contact</a>
     </nav>
+  
   </header>
 
   <main>
