--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <!-- Large centered photo -->
     <div class="profile-photo-container">
-      <img src="media/Profile pic web.jpeg" alt="Martin A. Harris" class="profile-photo" />
+      <img src="media/Profile_pic3.jpg" alt="Martin A. Harris" class="profile-photo" />
     </div>
 
     <h2>Research Highlights</h2>
