--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="about.html">About</a>
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
-      <a href="cv.pdf" target="_blank" rel="noopener noreferrer">View My CV</a>
+      <a href="cv.pdf" target="_blank" rel="noopener noreferrer">My CV</a>
       <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
       <a href="contact.html">Contact</a>
     </nav>
