--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="cv.pdf" target="_blank" rel="noopener noreferrer">My CV</a>
       <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
       <a href="contact.html">Contact</a>
-      <a href="https://github.com/MartinAHarris/Lava_Field_Axial_Viscometer" target="_blank" style="display:inline-block;padding:10px 20px;background:#007acc;color:white;text-decoration:none;border-radius:5px;">Axial Viscometer Repository</a>
+      <a href="https://github.com/MartinAHarris/Lava_Field_Axial_Viscometer" target="_blank">Axial Viscometer Repository</a>
 
     </nav>
   </header>
