--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
     <h2>Research Highlights</h2>
 
     <div class="gallery">
-      <img src="media/Lava_Av1.JPG" alt="Axial Viscometry in Iceland" />
-      <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland" />
-      <img src="media/P1080745.JPG" alt="Lava sampling in Iceland" />
+      <figure>
+        <img src="media/Lava_Av1.JPG" alt="Axial Viscometry in Iceland" />
+        <figcaption> Axial Viscometry in Iceland </figcaption>
+      </figure>
+      <figure>
+        <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland" />
+         <figcaption> Rotational Viscometry in Iceland </figcaption>
+      </figure>
+      <figure>
+        <img src="media/P1080745.JPG" alt="Lava sampling in Iceland" />
+        <figcaption> Lava sampling in Iceland </figcaption>
+      </figure>
     </div>
 
     <h2>Welcome</h2>
