--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="background"></div>
-  <header>
+ <header>
     <h1>Martin A. Harris</h1>
     <p>PhD (2025) | Post Doctoral Research Associate in Volcanology</p>
     <nav>
@@ -16,9 +16,11 @@
       <a href="about.html">About</a>
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
-      <a href="cv.pdf">CV</a>
+      <a href="cv.pdf" target="_blank" rel="noopener noreferrer">My CV</a>
       <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
       <a href="contact.html">Contact</a>
+      <a href="https://github.com/MartinAHarris/Lava_Field_Axial_Viscometer" target="_blank">Ax.Visco Github</a>
+
     </nav>
   </header>
 
