--- a/index.html
+++ b/index.html
@@ -21,40 +21,43 @@
       <a href="https://scholar.google.com/citations?user=17395704991083290304" target="_blank">Google Scholar</a>
       <a href="contact.html">Contact</a>
       <a href="https://github.com/MartinAHarris/Lava_Field_Axial_Viscometer" target="_blank">Ax.Visco Github</a>
-
     </nav>
   </header>
 
   <main>
-    <!-- Large centered photo -->
-    <div class="profile-photo-container">
-      <img src="media/Profile_pic3.jpg" alt="Martin A. Harris" class="profile-photo" />
+    <!-- Two-column top section -->
+    <div class="top-section">
+      <div class="profile-photo-container">
+        <img src="media/Profile_pic3.jpg" alt="Martin A. Harris" class="profile-photo" />
+      </div>
+
+      <div class="welcome-text">
+        <h2>Welcome</h2>
+        <p>
+          I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
+          This website summarizes my research, publications, and academic background.
+          For any questions or future communication, please feel free to contact me at:
+          <a href="mailto:martin.a.harris95@gmail.com" style="color: #aadfff;">martin.a.harris95@gmail.com</a>.
+        </p>
+      </div>
     </div>
 
+    <!-- Research Highlights Gallery -->
     <h2>Research Highlights</h2>
-
     <div class="gallery">
       <figure>
         <img src="media/Lava_Av1.JPG" alt="Axial Viscometry in Iceland" />
-        <figcaption> Axial Viscometry in Iceland </figcaption>
+        <figcaption>Axial Viscometry in Iceland</figcaption>
       </figure>
       <figure>
         <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland" />
-         <figcaption> Rotational Viscometry in Iceland </figcaption>
+        <figcaption>Rotational Viscometry in Iceland</figcaption>
       </figure>
       <figure>
-        <img src="media/P1080745.JPG" alt="Lava sampling in Iceland" />
-        <figcaption> Lava sampling in Iceland </figcaption>
+        <img src="media/P1080745.JPG" alt="Lava Sampling in Iceland" />
+        <figcaption>Lava Sampling in Iceland</figcaption>
       </figure>
     </div>
-
-    <h2>Welcome</h2>
-    <p>
-      I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
-      This website summarizes my research, publications, and academic background.
-      For any questions or future communication, please feel free to contact me at:
-      <a href="mailto:martin.a.harris95@gmail.com" style="color: #aadfff;">martin.a.harris95@gmail.com</a>.
-    </p>
   </main>
 
   <footer>
